fdo#59338 fix RTF paste into footnote

(cherry picked from commit b6a2083b9dfe5aceb0900315363ef41e2f3abef5)

Change-Id: I89501f267fd4256eb3b1316ef41a0f9b0786e0f0